[package]
name = "egui2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29.7", features = ["rwh_05"] }
egui-wgpu = "0.26.2"
wgpu = "0.19.3"
env_logger = "0.11.3"
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1.0.77"
cfg-if = "1.0.0"
log = "0.4.20"
egui-winit = "0.26.2"
egui = "0.26.2"
octotablet = "0.1.0"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }

[profile.dev]
opt-level = 1